--- a/HouseManage/HouseManage/Views/DailyCheck/PartDailyCheckList.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/PartDailyCheckList.cshtml
@@ -4,22 +4,25 @@
 @model List<Data.MSSQL.Model.Data.wy_check_task>;
 @foreach (var item in Model)
 {
-    <div class="mui-card" >
+    <div class="mui-card"  >
         <!--页眉，放置标题-->
-        <div class="mui-card-header" onclick="GetTaskDetail(@item.RWBH)">
+        <div class="mui-card-header" >
             <div class="mui-col-sm-12 mui-col-xs-12">
-                <div class="mui-row" >
+                <div class="mui-row">
                     <div class="mui-col-sm-8 mui-col-xs-8">
                         <span>任务编号:@item.RWBH</span>
                     </div>
                     <div class="mui-col-sm-4 mui-col-xs-4">
-                        <div class="mui-icon mui-icon-forward" style="float:right"></div>
+                        <button type="button" class="mui-btn mui-btn-primary" onclick="GetTaskDetail('@item.RWBH')"style="float:right">详情</button>
                     </div>
+                    @*<div class="mui-col-sm-2 mui-col-xs-2">
+                        <div class="mui-icon mui-icon-forward" style="float:right" onclick="GetTaskDetail('@item.RWBH')"></div>
+                    </div>*@
                 </div>
             </div>
         </div>
         <!--内容区-->
-        <div class="mui-card-content">
+        <div class="mui-card-content" onclick="GetTaskDetail('@item.RWBH')">
             <div class="mui-row">
                 <div class="mui-col-sm-12 mui-col-xs-12" style="background-color:white">
                     <div class="mui-row" style="padding-left:15px;">
@@ -39,17 +42,17 @@
                 </div>
             </div>
             <div class="mui-row" style="padding-left:15px;">
-                <div class="mui-col-sm-12 mui-col-xs-12" style="background-color:white;font-size:15px;">
+                <div class="mui-col-sm-12 mui-col-xs-12" style="background-color:white;font-size:15px;padding-top:5px">
                     <div class="mui-row">
-                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;">
+                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;padding-top:5px">
                             <span>@item.RWMC</span>
                         </div>
-                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;">
+                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;padding-top:5px">
                             <span>
                             @item.RWKSSJ.Value.ToString("yyyy/MM/dd")
                             </span>
                         </div>
-                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;">
+                        <div class="mui-col-sm-4 mui-col-xs-4" style="background-color:white;font-size:15px;padding-top:5px">
                             <span>@item.RWJSSJ.Value.ToString("yyyy/MM/dd")</span>
                         </div>
 
@@ -58,6 +61,5 @@
             </div>
         </div>
         <!--页脚，放置补充信息或支持的操作-->
-        <div class="mui-card-footer"></div>
     </div>
 }
