--- a/HouseManage/HouseManage/Views/User/Register.cshtml
+++ b/HouseManage/HouseManage/Views/User/Register.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "账号绑定";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <header id="header" class="mui-bar mui-bar-nav">
     @*返回图标*@
     @*<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>*@
-    <h1 class="mui-title">账号绑定</h1>
+    <h1 class="mui-title">@ViewData["Title"]</h1>
 </header>
 <p style="margin: 35px 15px;"></p>
 <div class="mui-content">
