--- a/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
@@ -169,7 +169,7 @@
     };
     function GetTaskDetail(RWBH) {
         console.log(RWBH);
-        window.location.href = "../../DailyCheck/DailyCheckDetail?RWBH=" + RWBH;
+        window.location.href = "DailyCheckDetail?RWBH=" + RWBH;
     };
     function GetIndex() {
         this.temp.page = 1;
